# yubaba

./: .gitignore  Cargo.toml  Cross.toml
.github/workflows/: release.yml
.yah/: .gitignore
crates/almanac/: Cargo.toml
crates/almanac/src/: coalesce.rs  config.rs  feed.rs  gh.rs  issues_feed.rs  issues_source.rs  lib.rs  r2.rs  receiver.rs  runner.rs  serve.rs  sink.rs  sources.rs
crates/cheers-mock/: Cargo.toml
crates/cheers-mock/src/: env.rs  lib.rs  mock_issuer.rs
crates/cloud/: Cargo.toml
crates/cloud/examples/: load_probe.rs
crates/cloud/src/: almanac_dispatch.rs  app_manifest.rs  asset_journal.rs  asset_status.rs  cloud_init.rs  compose.rs  config.rs  envoy.rs  identities.rs  lib.rs  local_driver_glue.rs  mesh.rs  mesh_service.rs  multi_root.rs  paths.rs  provision.rs  release_manifest.rs  state.rs  status.rs  tenant.rs  validate.rs
crates/cloud/src/envoy/: ci.rs  cloud_object.rs  cloud_vps.rs  dns_record.rs  floating_ip.rs  messaging.rs  observability.rs  payments.rs
crates/cloud/src/provider/: cloudflare.rs  cloudflare_envoy.rs  digitalocean.rs  floating_ip.rs  hetzner.rs  hetzner_envoy.rs  hetzner_floating_ip.rs  local_docker.rs  local_docker_envoy.rs  mod.rs  ovh_floating_ip.rs  vultr_floating_ip.rs
crates/cloud/src/reconciler/: bundle_store.rs  cf_creds.rs  cloudflare_worker.rs  container.rs  derive_cache_prune.rs  domain.rs  lowering_golden.rs  mesofact_bundle.rs  mesofact_runner.rs  mesofact_static.rs  mod.rs  pond.rs  pond_publish.rs  r2_publish.rs  static_asset.rs  static_asset_prune.rs  sync_status.rs
crates/cloud/templates/: mirror.yml
crates/cloud/testdata/mesofact-in-container/: workload.toml
crates/cloud/tests/: live_workspace_smoke.rs  mesofact_static_e2e.rs  pond_smoke.rs  whisper_derive_e2e.rs
crates/cloud/worker/: miniflare-sim.mjs  package.json  router.bundle.js  router.ts  tsconfig.json
crates/cloud/worker/tests/: router.test.ts
crates/constable/: Cargo.toml
crates/constable-proto/: Cargo.toml
crates/constable-proto/src/: codec.rs  lib.rs  messages.rs  version.rs
crates/constable/src/: containerd.rs  docker.rs  fake.rs  inlined.rs  lib.rs  probe.rs  sibling.rs
crates/hetzner/: Cargo.toml
crates/hetzner/src/: lib.rs
crates/kamaji/: Cargo.toml
crates/kamaji-bin/: Cargo.toml
crates/kamaji-bin/src/: cgroup.rs  containerd.rs  drain.rs  journal.rs  lib.rs  main.rs  native.rs  pidfd.rs  probe.rs  server.rs
crates/kamaji-bin/src/auth/: claims.rs  config.rs  deny.rs  error.rs  jwks.rs  metadata.rs  mod.rs  policy.rs  verifier.rs
crates/kamaji-bin/tests/: mock_issuer_boot.rs  uds_skeleton.rs
crates/kamaji/examples/: native_supervise.rs
crates/kamaji/src/: containerd.rs  docker.rs  fake.rs  inlined.rs  lib.rs  native.rs  probe.rs  sibling.rs
crates/keys/: Cargo.toml
crates/keys/src/: lib.rs
crates/local-driver/: Cargo.toml
crates/local-driver/src/: cloud_mesofact_runner.rs  lib.rs  local_runtime.rs  pond_mesofact_dev.rs  pond_miniflare.rs  pond_minio.rs  pond_ssr_runtime.rs  pond_warden.rs  s3_sign.rs
crates/object-store/: Cargo.toml
crates/object-store/src/: lib.rs  r2.rs
crates/warden-test-harness/: Cargo.toml
crates/warden-test-harness/src/: lib.rs
crates/warden-test-macros/: Cargo.toml
crates/warden-test-macros/src/: lib.rs
crates/warden-test-macros/tests/: expand.rs
crates/warden-test-macros/tests/fixtures/: both_tiers.expanded.rs  both_tiers.rs
crates/workload-spec/: Cargo.toml
crates/workload-spec/examples/: parse_whisper_toml.rs
crates/workload-spec/src/: compose_import.rs  lib.rs  rollout.rs  secrets.rs  validate.rs  version.rs
crates/workload-spec/tests/: compose_import.rs  mesh_resolver.rs  restart_policy.rs  round_trip.rs  secrets_invariant.rs  semantic.rs  shape_fixtures.rs
crates/workload-spec/tests/compose/build-block-warns/: docker-compose.yml  expected.json
crates/workload-spec/tests/compose/host-network-rejected/: docker-compose.yml  expected_error.json
crates/workload-spec/tests/compose/multi-service-with-deps/: docker-compose.yml  expected.json
crates/workload-spec/tests/compose/simple-web/: docker-compose.yml  expected.json
crates/workload-spec/tests/fixtures/bad/: bind_volume_non_infra.json  image_tag_empty.json  mesh_identity_starts_dash.json  name_empty.json  name_invalid_chars.json  name_too_long.json  public_port_not_in_mesh.json  replicas_too_high.json  secret_env_var_lowercase.json  secret_target_relative_path.json  tailscale_tag_no_prefix.json
crates/workload-spec/tests/fixtures/valid/: minimal.json  warn_healthcheck_delay.json  warn_restart_never.json  warn_unknown_tier.json
crates/yubaba/: Cargo.toml
crates/yubaba-client/: Cargo.toml
crates/yubaba-client/src/: lib.rs
crates/yubaba-test-harness/: Cargo.toml
crates/yubaba-test-harness/src/: lib.rs
crates/yubaba-test-macros/: Cargo.toml
crates/yubaba-test-macros/src/: lib.rs
crates/yubaba-test-macros/tests/: expand.rs
crates/yubaba-test-macros/tests/fixtures/: both_tiers.expanded.rs  both_tiers.rs
crates/yubaba/src/: acme_issuer.rs  cheers_client.rs  identity.rs  leader.rs  lib.rs  litestream.rs  main.rs  node.rs  pond.rs  secret_reload.rs  secrets.rs  service_records.rs
crates/yubaba/src/deploy/: env_validate.rs  mesh_resolve.rs  mod.rs  secret_mount.rs
crates/yubaba/src/identity/: bootstrap.rs
crates/yubaba/src/mesh/: mod.rs
crates/yubaba/src/pond/: launcher.rs  mesofact_dev.rs  miniflare.rs  minio.rs  ssr_runtime.rs
crates/yubaba/src/raft/: mod.rs  network.rs  store.rs
crates/yubaba/src/rollout/: engine.rs  gate.rs  mod.rs
crates/yubaba/src/runtime/: mod.rs
crates/yubaba/src/testing/: cloudflared_mock.rs  headscale_mock.rs  mod.rs
crates/yubaba/tests/: bootstrap_single_node.rs  integration_constable_client.rs  integration_deploy_through_kamaji.rs  integration_mesh.rs  integration_operator_bridge.rs  integration_ownership_smoke.rs  integration_public_ingress.rs  integration_single_node.rs  integration_smoke_filter.rs  mixed_version_wire_interop.rs  pond_kamaji_supervision.rs  pond_reconciler_smoke.rs  raft_add_learner.rs  raft_transfer_leader.rs
(+61 files in other folders)
