[workspace]
members = [
    "crates/hetzner",
    "crates/almanac",
    "crates/cloud",
    "crates/yubaba",
    "crates/yubaba-client",
    "crates/yubaba-test-harness",
    "crates/yubaba-test-macros",
]
resolver = "2"

[workspace.package]
version = "0.8.20"
edition = "2021"
authors = ["yah Dev <human@yah.dev>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yah-ai/yubaba"

# Cross-workspace deps yubaba/cloud pulls from the sibling oss repos during
# local development. Redirects the version-based deps to their local paths for
# atomic monorepo dev; stripped on export (scripts/export-oss.sh) so the
# standalone mirror resolves yah-base/kamaji/qed crates from crates.io.
