[package]
name = "constable-proto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Warden ↔ Constable UDS wire protocol — postcard-encoded, length-prefix-framed, versioned message schemas. Shared schema crate; no I/O. See W154."
publish = false

[lib]
name = "constable_proto"
path = "src/lib.rs"

[dependencies]
# Intent payloads ride workload-spec's existing Workload envelope so warden and
# constable share one source of truth for spec shape.
workload-spec = { path = "../workload-spec" }

serde = { version = "1.0", features = ["derive"] }
postcard = { version = "1.1", features = ["use-std"] }
thiserror = "1.0"

[dev-dependencies]
serde_json = "1.0"
