[package]
name = "constable-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Constable — yah's relocatable workload supervisor. Trait surface + supporting types; backend impls land in R484-T2. See .yah/docs/working/W199-constable-universal-supervisor.md."
publish = false

[lib]
path = "src/lib.rs"

[features]
# Production containerd gRPC backend. Mirrors the warden feature of the same
# name — when warden's `containerd-integration` is on, this one is forwarded.
containerd-integration = ["dep:containerd-client", "dep:prost-types"]

# Docker-CLI backend for pond / OrbStack. No extra Rust deps (shells out).
docker-integration = []

# In-memory FakeRuntime for unit testing. Excluded from release binaries.
testing = []

# Sibling-deployment client: postcard-over-UDS ConstableClient for callers
# that talk to a separate constable.service process (W199 §The move shape 2).
# Inlined deployments don't need this; gating it keeps the dep-light shape of
# the inlined-only desktop build.
sibling = ["dep:constable-proto"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
futures-core = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["rt", "macros", "net", "io-util", "sync", "fs", "time", "process"] }
tokio-stream = { version = "0.1", features = ["io-util"] }
tracing = "0.1"
workload-spec = { path = "../workload-spec" }

# containerd gRPC client (optional — only with containerd-integration feature)
containerd-client = { version = "0.9", optional = true }
prost-types = { version = "0.14", optional = true }

# Sibling-shape postcard wire codec (optional — gated on `sibling` feature).
constable-proto = { path = "../constable-proto", optional = true }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "test-util"] }
