[package]
name = "local-driver"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Local-tier infrastructure primitives shared by cloud (sim/pond reconciler) and warden (pond MinIO slot lifecycle): docker-CLI runtime detection + S3 SigV4 helpers."
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
# WorkloadSpec — LocalDockerRuntime implements workload_spec::WorkloadRuntime
# to plug the docker-CLI driver into the warden seam (R256-F10).
workload-spec = { path = "../workload-spec" }

anyhow = "1.0"
async-trait = "0.1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "process", "net", "time", "sync", "fs", "io-util"] }
tracing = "0.1"

# Serde — MinioSpec / MinioRunning derive Serialize/Deserialize so warden's
# pond/deploy HTTP body and cloud's reconciler can share them.
serde = { version = "1.0", features = ["derive"] }
# serde_json — MiniflareSpec encodes ssr_prefixes as a JSON array string for
# the Worker's SSR_PREFIXES binding (R434-F4).
serde_json = "1.0"

# S3 SigV4 helpers (s3_sign module).
hmac = { version = "0.12", features = ["std"] }
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "test-util"] }
