[package]
name = "yah-object-store"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Object-store trait + InMemory impl. R2ObjectStore lives here once F2 lands; today scryer + cloud reconciler consume it."
publish = false

[lib]
name = "yah_object_store"
path = "src/lib.rs"

[dependencies]
thiserror = "1"

# R2ObjectStore impl (R498-F2) — reqwest blocking keeps the trait sync.
# rustls-tls avoids the system OpenSSL dep matrix on Linux musl targets.
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
sha2 = "0.10"
hex = "0.4"
percent-encoding = "2"

# Share the SigV4 helpers with cloud/hetzner/local_docker via local-driver.
local-driver = { path = "../local-driver" }

# Vault-backed constructor pulls cloudflare-r2-* slots.
fob = { path = "../keys" }
