# @arch:see(.yah/docs/architecture/A053-yah-yubaba-integration-testing.md)

[package]
name = "yubaba-test-harness"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Cluster harness for yubaba integration tests — test_cluster(), WardenHandle, NetworkDegrade, and the auto-teardown Drop impl."

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.8", default-features = false, features = ["http1", "json", "tokio"] }
cloud = { path = "../cloud" }
# openraft: needed to call raft.initialize(members) during multi-node bootstrap.
# Version must match yubaba's openraft dependency exactly.
openraft = { version = "0.9", features = ["serde", "storage-v2"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1.0"
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net"] }
tracing = "0.1"
workload-spec = { package = "yah-workload-spec", version = "0.8.16" }
yubaba = { path = "../yubaba" }
kamaji = { version = "0.8.16" }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "test-util"] }
