# @arch:see(.yah/docs/architecture/A053-yah-yubaba-integration-testing.md)

[package]
name = "yubaba-test-macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
# R542: workspace-internal test crate — stays publish=false permanently.
# Nothing outside oss/yubaba consumes it, and it has no root [patch.crates-io]
# entry. Do not flip this when the rest of the workspace publishes.
publish = false
description = "Proc macro #[test_with_provider(local, smoke)] — parameterized integration test expansion for yubaba's two-tier test harness."

[lib]
proc-macro = true
path = "src/lib.rs"

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

[dev-dependencies]
# For golden-file macro expansion tests.
# Run `MACROTEST=overwrite cargo test -p yubaba-test-macros expand_tests` to
# regenerate .expanded.rs golden files after changing the macro output.
macrotest = "1"
# Traits and types the fixture files reference.
cloud = { package = "yah-cloud", path = "../cloud", features = ["local-docker"] }
yubaba = { path = "../yubaba", features = ["containerd-integration", "testing"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
